--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,13 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <javafx.version>21.0.1</javafx.version>
   </properties>
 
 
+
   <dependencies>
-    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+  
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -23,31 +25,32 @@
       <scope>test</scope>
     </dependency>
 
-
-    
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
-      <version>21.0.1</version>
+      <version>${javafx.version}</version>
     </dependency>
 
-    
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>21.0.1</version>
+      <version>${javafx.version}</version>
     </dependency>
 
   </dependencies>
 
+
+
   <build>
+
     <plugins>
+
       <plugin>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>shredding.club.Main</mainClass>
+          <mainClass>shredding.club.snowcon.Main</mainClass>
         </configuration>
       </plugin>
 
@@ -61,14 +64,9 @@
         </configuration>
       </plugin>
 
-
-
-
-
     </plugins>
+
   </build>
-
-
 
 
 
