--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,14 @@
       <version>2.10.1</version>
     </dependency>
 
+    
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.16.1</version>
+    </dependency>
+
+
   </dependencies>
 
 
