--- a/pom.xml
+++ b/pom.xml
@@ -64,9 +64,11 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>shredding.club.snowcon.Main</mainClass>
+          <mainClass>shredding.club.snowcon.App</mainClass>
         </configuration>
       </plugin>
+
+      
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -76,6 +78,38 @@
           <source>21</source>
           <target>21</target>
         </configuration>
+      </plugin>
+
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.1.0</version> 
+        <configuration>
+            <archive>
+                <manifest>
+                  <addClasspath>true</addClasspath>
+                  <mainClass>shredding.club.snowcon.App</mainClass>
+                </manifest>
+            </archive>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.5.1</version>
+        <configuration>
+          <createDependencyReducedPom>false</createDependencyReducedPom>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
     </plugins>
