--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>shredding.club.snowcon.App</mainClass>
+          <mainClass>shredding.club.snowcon.Main</mainClass>
         </configuration>
       </plugin>
 
@@ -89,7 +89,7 @@
             <archive>
                 <manifest>
                   <addClasspath>true</addClasspath>
-                  <mainClass>shredding.club.snowcon.App</mainClass>
+                  <mainClass>shredding.club.snowcon.Main</mainClass>
                 </manifest>
             </archive>
         </configuration>
