Add fxml inclusion in target directory

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <version>1.0.1</version>
   <name>snowcon</name>
   <url>http://maven.apache.org</url>
+  
 
 
   <properties>
@@ -57,6 +58,21 @@
 
   <build>
 
+    <resources>
+        <resource>
+          <directory>src/main/java/shredding/club/snowcon</directory>
+            <includes>
+              <include>/*.fxml</include>
+            </includes>
+          <targetPath>${project.build.directory}/classes/shredding/club/snowcon</targetPath>
+        </resource>
+      </resources>
+
+
+    
+   
+
+
     <plugins>
 
       <plugin>
@@ -92,6 +108,9 @@
                   <mainClass>shredding.club.snowcon.Main</mainClass>
                 </manifest>
             </archive>
+            <includes>
+                  <include>/*.fxml</include>
+              </includes>
         </configuration>
       </plugin>
 
