--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
           <directory>src/main/java/shredding/club/snowcon</directory>
             <includes>
               <include>/view/*.fxml</include>
+              <include>/view/resources/**/*</include>
             </includes>
           <targetPath>${project.build.directory}/classes/shredding/club/snowcon</targetPath>
         </resource>
