Create Key class to hold API key and ignore it in version control

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,11 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+# VSCode settings file
 .vscode
+
+# contains private API key
+main/java/shredding/club/snowcon/model/Key.java
 
 # Eclipse m2e generated files
 # Eclipse Core
