--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,14 @@
       <version>2.10.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.16.0</version>
+    </dependency>
+
+
+
     
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
